app/assets/stylesheets/users.css.scss
// Place all the styles related to the Users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.button_title_adjust {
  margin-top: 24px;
}

#owner-info {
  padding: 15px 0;
  background-color: $offset-color;
  width: 100%;
  h1 {
    margin-top: 0;
  }
}

.owner-box {
  padding-top: 15px;
  padding-bottom: 15px;
}

.owner-item {
  + .owner-item {
    margin-top: 1.5em;
  }

  .media-left {
    @media (min-width: $screen-sm-min) {
      padding-right: 15px;
    }
  }

  .media-heading {
    margin-top: 3px;
    color: $link-color;
    font-weight: bold;
  }

  .owner-nickname {
    margin-bottom: 5px;
    display: block;
    font-size: $font-size-large;
  }
}

